--- a/meta-mct/meta-s7106/recipes-phosphor/fans/phosphor-pid-control/phosphor-pid-control.service
+++ b/meta-mct/meta-s7106/recipes-phosphor/fans/phosphor-pid-control/phosphor-pid-control.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Phosphor-Pid-Control Margin-based Fan Control Daemon
+After=xyz.openbmc_project.fansensor.service
 
 [Service]
 Restart=always
